Aadhi: Fixing alignment issue in bottom of all the screen

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -89,6 +89,7 @@ footer {
   # background:light-grey;
    height:30px;
    width:100%;
+   padding-bottom: 50px;
   a {
    
     &:hover {
